--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,1 +1,14 @@
-Hello
+<section class="callout">
+  <h1>Join Today</h1>
+  <p>
+    <strong>
+      We're Ireland's largest public sector union – over 80,000-strong and growing.
+    </strong>
+  </p>
+  <p>
+    We win better pay and conditions for members in health, education, local and central government.
+  </p>
+  <p>
+    Most members pay less than €5 per week, deducted automatically from their salary.
+  </p>
+</section>
