--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -61,6 +61,7 @@
 //  56. Xy Grid
 
 @import 'util/util';
+@import 'color';
 
 // 1. Global
 // ---------
@@ -69,8 +70,8 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #1779ba,
-  secondary: #767676,
+  primary: #3d8a94,
+  secondary: $forsa-aqua,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
@@ -329,16 +330,16 @@ $buttongroup-radius-on-each: true;
 // 13. Callout
 // -----------
 
-$callout-background: $white;
-$callout-background-fade: 85%;
-$callout-border: 1px solid rgba($black, 0.25);
+$callout-background: $forsa-aqua;
+$callout-background-fade: 0;
+$callout-border: 0;
 $callout-margin: 0 0 1rem 0;
 $callout-sizes: (
   small: 0.5rem,
   default: 1rem,
   large: 3rem,
 );
-$callout-font-color: $body-font-color;
+$callout-font-color: $body-background;
 $callout-font-color-alt: $body-background;
 $callout-radius: $global-radius;
 $callout-link-tint: 30%;
@@ -889,7 +890,11 @@ $grid-margin-gutters: (
   medium: 30px
 );
 $grid-padding-gutters: $grid-margin-gutters;
-$grid-container-padding: $grid-padding-gutters;
+$grid-container-padding: (
+  small: 2rem,
+  medium: 3rem,
+  large: 10rem
+);
 $grid-container-max: $global-width;
 $xy-block-grid-max: 8;
 
