Fix three logo sizes for the breakpoints
Stop the logo jumping around on resize.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,8 +1,17 @@
+@import 'settings';
+@import 'foundation';
+
 header {
   margin-top: 1rem;
   margin-bottom: 1rem;
 
-  .logo {
-    width: 50%;
+  @include breakpoint(small only) {
+    .logo { height: 120px; }
+  }
+  @include breakpoint(medium only) {
+    .logo { height: 140px; }
+  }
+  @include breakpoint(large only) {
+    .logo { height: 170px; }
   }
 }
