--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <body>
     <div class="grid-container">
       <header class="grid-x grid-margin-x">
-        <div class="cell medium-6 large-4">
+        <div class="cell">
           <%= image_tag 'forsa_logo.svg', class: 'logo' %>
         </div>
       </header>
