--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -17,9 +17,10 @@ header {
 }
 
 footer {
+  width: 100%;
   color: $white;
-
-  padding: 1rem;
+  min-height: 12em;
+  padding: $global-padding;
 
   background-image: asset-url('footer-bg.svg');
   background-size: cover;
