--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -14,8 +14,10 @@
   src: local('Polaris Bold'), local('Polaris-Bold'), font-url('Polaris-Bold.woff2') format('woff2');
 }
 
+$body-font-family-bold: 'Polaris Bold', 'Helvetica Neue', 'Arial Black', sans-serif;
+
 article.content {
   h1, h2, h3, h4, h5, h6, strong {
-    font-family: 'Polaris Bold', 'Helvetica', 'Arial Black', sans-serif;
+    font-family: $body-font-family-bold;
   }
 }
