Capture details for "About you" step
In its simplest form, and with no validation, integrate Wicked::Wizard.
Use the MembershipApplicationsController to create applications only
with a first name and email. Use a session variable to hold the ID of
the current membership application.

Then use the MembershipApplications::StepsController to build up the
MembershipApplication object. Currently, that means capturing the
details, not validating them at all, and then redirecting to a dummy
"completed" page which holds no content at all.

--- a/app/views/membership_applications/new.html.erb
+++ b/app/views/membership_applications/new.html.erb
@@ -17,7 +17,7 @@
   <h2>Get started</h2>
   <p class="side-note">We'll use this information to contact you about your membership.</p>
 
-  <%= form_for(@membership_application) do |f| %>
+  <%= form_for(@membership_application, url: membership_application_path) do |f| %>
     <fieldset>
       <div class="cell">
         <%= f.label :first_name %>
