Add some titles
To avoid repetition, do this via a step_title partial for now.
Perhaps we can flesh out Steps a little bit such that it can hold
titles, parameters and numbered parts

--- a/app/views/membership_applications/steps/about-you.html.erb
+++ b/app/views/membership_applications/steps/about-you.html.erb
@@ -1,6 +1,4 @@
-<p>Step 1 of 4</p>
-
-<h1>About you</h1>
+<%= render 'step_title', title: 'About you', step: 1, of: 4 %>
 
 <%= form_for @membership_application, url: wizard_path do |f| %>
   <fieldset>
