--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+    <title>
+      <%= if content_for?(:title) then yield(:title) + ' | ' end %>
+      <%= t('main_title') %>
+    </title>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
