--- a/app/views/membership_applications/steps/contact-details.html.erb
+++ b/app/views/membership_applications/steps/contact-details.html.erb
@@ -1,6 +1,4 @@
-<p>Step 2 of 4</p>
-
-<h1>Contact details</h1>
+<%= render 'step_title', title: 'Contact details', step: 2, of: 4 %>
 
 <%= form_for @membership_application, url: wizard_path do |f| %>
   <fieldset>
