Change to foundation callout secondary
It exists as a concept, we don't need our own class

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -20,7 +20,7 @@ header {
   color: $dark-gray;
 }
 
-.callout-secondary {
+.callout.secondary {
   background-color: $light-gray;
   color: $black;
 }
