--- a/app/views/membership_applications/new.html.erb
+++ b/app/views/membership_applications/new.html.erb
@@ -1,4 +1,4 @@
-<section class="callout">
+<section class="callout primary">
   <h1>Join Today</h1>
   <p>
     <strong>
@@ -31,7 +31,7 @@
         <%= f.text_field :email, placeholder: true %>
       </div>
 
-      <section class="callout callout-secondary">
+      <section class="callout secondary">
         <h3>A note about help with existing problems at work</h3>
         <p>Fórsa helps our members. Unfortunately, we are unlikely to be able to help
           with problems that occurred at work before you became a member.</p>
