Add a help_text helper
Wire it up to payroll number and pay rate on step 3

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -439,9 +439,9 @@ $fieldset-padding: rem-calc(20);
 $fieldset-margin: rem-calc(18 0);
 $legend-padding: rem-calc(0 3);
 $form-spacing: rem-calc(16);
-$helptext-color: $black;
+$helptext-color: $dark-gray;
 $helptext-font-size: rem-calc(13);
-$helptext-font-style: italic;
+$helptext-font-style: normal;
 $input-prefix-color: $black;
 $input-prefix-background: $light-gray;
 $input-prefix-border: 1px solid $medium-gray;
