--- a/app/views/membership_applications/completed.html.erb
+++ b/app/views/membership_applications/completed.html.erb
@@ -1,1 +1,16 @@
-Hi there, this is the end
+<h1>Application complete - THANK YOU!</h1>
+
+
+<h2>Here’s what happens next…</h2>
+
+<ol>
+  <li>You’ll get an email from us confirming that we have received your application and asking you to verify it by clicking on a link (this may or maynot be necessary but it might provide an additional protection for GDPR)</li>
+  <li>We will notify your branch of your application and we will ask your employer to deduct your union subscriptions</li>
+  <li>You’ll get an email informing you of your branch details and how to access additional union benefits</li>
+  <li>You’ll receive your membership card with your unique membership number</li>
+  <li>You now have a voice in the workplace, and benefit from the collective strength of being one of Fórsa’s 80,000+ members*</li>
+</ol>
+
+<p>Thank you for joining us.</p>
+
+<p class="side-note">(*Subject to final processing and authorisation)<p>
