Style the horizontal radio group
Hide the radio buttons as 0-opacity to keep them selectable. Use
fieldset with class .radio-group-horizontal for the outer semantics,
and an inner div to hold the actual buttons.

--- a/app/views/membership_applications/steps/work-and-pay.html.erb
+++ b/app/views/membership_applications/steps/work-and-pay.html.erb
@@ -24,9 +24,11 @@
     <%= help_for :pay_rate %>
     <%= f.text_field :pay_rate %>
 
-    <fieldset>
+    <fieldset class="radio-group-horizontal">
       <label class="side-note">Every:</label>
-      <%= f.collection_radio_buttons :pay_unit, MembershipApplication::PAY_UNIT, :to_s, :capitalize %>
+      <div>
+        <%= f.collection_radio_buttons :pay_unit, MembershipApplication::PAY_UNIT, :to_s, :capitalize %>
+      </div>
     </fieldset>
 
     <%= f.submit 'Next' %>
