--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -29,3 +29,37 @@ input {
     background-color: #f9ecea;
   }
 }
+
+.radio-group-horizontal {
+  width: 80%;
+  div {
+    border: 1px solid $forsa-aqua;
+    border-radius: $form-button-radius;
+
+    label {
+      color: $white;
+      background-color: lighten($forsa-aqua, 10%);
+      margin: 0;
+      text-align: center;
+      width: 25%;
+      padding: 0.5rem;
+      font-family: $body-font-family;
+      border-right: 1px solid $forsa-aqua;
+    }
+
+    label:last-child {
+      border-right: 0;
+    }
+
+    input[type=radio] {
+      opacity: 0;
+      position: fixed;
+      width: 0;
+    }
+
+    input[type=radio]:checked + label {
+      background-color: $forsa-aqua;
+      font-family: $body-font-family-bold;
+    }
+  }
+}
