Remove comment/move to help_for on new.erb

--- a/app/views/membership_applications/new.html.erb
+++ b/app/views/membership_applications/new.html.erb
@@ -28,8 +28,7 @@
       <div class="cell">
         <%= f.label :email %>
         <%= form_field_errors f, :email %>
-        <%= render 'shared/help_for_field', field: 'email' %>
-        <%#= help_text_with_dropdown :email %>
+        <%= help_for 'email' %>
         <%= f.text_field :email, placeholder: true %>
       </div>
 
