Accept and validate hours_per_week
Only show when 'hour' is the selected pay_unit.

Add a work_and_pay pack, reference it from application.js. Presently, it
only manages the visibility of the hours_per_week input pane

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -21,7 +21,8 @@ input {
     color: $white;
     font-family: $body-font-family-bold;
     font-weight: bold;
-    padding: $button-padding
+    padding: $button-padding;
+    clear: both;
   }
 }
 
@@ -65,5 +66,19 @@ input {
       background-color: $forsa-aqua;
       font-family: $body-font-family-bold;
     }
+  }
+}
+
+.hours-per-week {
+  width: 15rem;
+
+  input[type=text] {
+    width: 5rem;
+  }
+
+  .help-text {
+    float: right;
+    width: 60%;
+    margin-top: 0;
   }
 }
