Display a monthly estimate for your pay
Doesn't yet:

- Show a spinner
- Hold off on asking the API until it has all the details required
- Have any testing!

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -82,3 +82,10 @@ input {
     margin-top: 0;
   }
 }
+
+.monthly-estimate {
+  label {
+    margin-bottom: $global-margin;
+  }
+  margin-bottom: $global-margin * 2;
+}
