--- a/app/views/membership_applications/steps/work-and-pay.html.erb
+++ b/app/views/membership_applications/steps/work-and-pay.html.erb
@@ -39,6 +39,9 @@
     </section>
 
     <section class="hide monthly-estimate">
+      <div class="hide spinner-overlay">
+        <div class="lds-dual-ring"></div>
+      </div>
       <label>
         Based on your salary, your monthly payment will be
         €<span id="monthly-estimate-value">#NOVALUE</span>
