--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
     <%= favicon_link_tag 'apple-touch-icon.png', sizes: '180x180', rel: 'apple-touch-icon', type: 'image/png'  %>
     <%= favicon_link_tag 'favicon-32x32.png', sizes: '32x32', type: 'image/png'  %>
     <%= favicon_link_tag 'favicon-16x16.png', sizes: '16x16', type: 'image/png'  %>
+
+    <%= render 'shared/google_analytics' %>
   </head>
 
   <body>
