Add the skeleton of an admin front end
What does it do? Not much:

- Allows us to log in and go to /admin/membership-applications
- Shows us a list of signed applications
- Gives us a link to get the JSON for them

What doesn't it do and should?

- Allow us to mark things processed
- Paginate
- Allow us to download only sections of things

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,13 @@
 
     <div class="grid-container-fluid">
       <footer class="grid-x">
+        <div class="cell float-right">
+          <% if user_signed_in? %>
+            Signed in as <%= current_user.email %>.
+            <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+          <% end %>
+        </div>
+
         <ul class="cell">
           <li><%= link_to 'How we use your data', '#' %></li>
           <li><%= link_to 'Privacy policy', '#' %></li>
