Capture the home_address field

--- a/app/views/shared/_help_for_field.html.erb
+++ b/app/views/shared/_help_for_field.html.erb
@@ -1,7 +1,9 @@
 <% interpolations ||= {} %>
 
 <p class="help-text">
-  <%= t("helpers.help_text.membership_application.#{field}", interpolations) %>
+  <% if I18n.exists?("helpers.help_text.membership_application.#{field}") %>
+    <%= t("helpers.help_text.membership_application.#{field}", interpolations) %>
+  <% end %>
 
   <% if I18n.exists?("helpers.help_dropdown.membership_application.#{field}") %>
     <a data-toggle="<%= field %>-help-dropdown">
