--- a/app/views/membership_applications/steps/contact-details.html.erb
+++ b/app/views/membership_applications/steps/contact-details.html.erb
@@ -10,6 +10,11 @@
     <%= form_field_errors f, :phone_number %>
     <%= f.text_field :phone_number %>
 
+    <%= f.label :home_address %>
+    <%= help_for :home_address %>
+    <%= form_field_errors f, :home_address %>
+    <%= f.text_area :home_address, rows: 5 %>
+
     <%= f.submit 'Next' %>
   </fieldset>
 <% end %>
