Update landing copy lead text

--- a/app/views/membership_applications/new.html.erb
+++ b/app/views/membership_applications/new.html.erb
@@ -1,21 +1,27 @@
 <section class="callout primary">
   <h1>Join Today</h1>
+
   <p>
     <strong>
-      We're Ireland's largest public sector union – over 80,000-strong and growing.
+      We are Ireland’s newest and fastest-growing union with over 80,000 members.
     </strong>
   </p>
   <p>
-    We win better pay and conditions for members in health, education, local and central government.
+    Fórsa is the largest union in the public sector, with a strong and vibrant membership across the semi-state, private and community/voluntary sectors.
   </p>
   <p>
-    Most members pay less than €5 per week, deducted automatically from their salary.
+    We win better terms and conditions for our members, provide expert representation, professional advice, workplace support and protection.
+  </p>
+  <p>
+    Most members pay less than €5 a week, deducted directly from their salary.
   </p>
 </section>
 
 <section>
   <h2>Get started</h2>
-  <p class="side-note">We'll use this information to contact you about your membership.</p>
+  <p class="side-note">
+    We’ll use this information to get  in touch with you about your membership application.
+  </p>
 
   <%= form_for(@membership_application, url: membership_application_path) do |f| %>
     <fieldset>
