Rename 'work-and-pay' step to 'your-work'
Don't separate pay yet; this is a big enough refactor

--- a/app/views/membership_applications/steps/your-work.erb
+++ b/app/views/membership_applications/steps/your-work.erb
@@ -1,4 +1,4 @@
-<%= render 'step_title', title: 'Your work and pay', step: 3, of: 4 %>
+<%= render 'step_title', title: 'Your work', step: 3, of: 4 %>
 
 <%= form_for @membership_application, url: wizard_path do |f| %>
   <fieldset>
