Update email address
Probably should find a central config-y place for it, for now it lives
as a literal (twice) in declaration.erb

--- a/app/views/membership_applications/steps/declaration.erb
+++ b/app/views/membership_applications/steps/declaration.erb
@@ -23,7 +23,8 @@
         with problems that occurred at work before you became a member.</p>
 
       <p><strong>
-        If you have any questions about this, please <%= link_to 'Email us', 'mailto:membership@forsa.ie' %> or
+        If you have any questions about this, please email us at
+        <%= link_to 'applicationsinfo@forsa.ie', 'mailto:applicationsinfo@forsa.ie' %> or
         call us on <%= link_to '01 817 1500', 'tel:01 817 1500' %>
       </strong></p>
     </section>
