Link to union rules

--- a/app/views/membership_applications/steps/declaration.erb
+++ b/app/views/membership_applications/steps/declaration.erb
@@ -3,7 +3,7 @@
 <h3>By completing this application for membership you agree:</h3>
 
 <ol>
-  <li>to abide by the union <%= link_to 'rules', '#' %> and decisions taken in accordance with these rules</li>
+  <li>to abide by the union <%= link_to 'rules', 'https://www.forsa.ie/about-forsa/rule/' %> and decisions taken in accordance with these rules</li>
   <li>that the information provided is correct to the best of your knowledge and that Fórsa can use this information to contact you about necessary union business</li>
   <li>that you authorise your employer to deduct your union subscription from your salary/wages and to pay this amount to Fórsa on your behalf</li>
   <li>that Fórsa can notify your employer to commence this deduction as soon as possible and continue it until further written or electronic notice either from you or Fórsa, as appropriate.</li>
