--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -20,9 +20,15 @@ header {
   color: $dark-gray;
 }
 
-.callout.secondary {
-  background-color: $light-gray;
-  color: $black;
+.callout {
+  &.primary {
+    margin-bottom: $global-margin * 2;
+  }
+
+  &.secondary {
+    background-color: $light-gray;
+    color: $black;
+  }
 }
 
 footer {
