Deal with MASSIVE LOGO
xlarge and xxlarge were just scaling. Default to 170px, which is the
largest it can get, and just have two smaller versions for the smallest
breakpoints

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -5,14 +5,14 @@ header {
   margin-top: 1rem;
   margin-bottom: 1rem;
 
+  .logo {
+    height: 170px;
+  }
   @include breakpoint(small only) {
     .logo { height: 120px; }
   }
   @include breakpoint(medium only) {
     .logo { height: 140px; }
-  }
-  @include breakpoint(large only) {
-    .logo { height: 170px; }
   }
 }
 
