--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,7 @@
         </div>
 
         <ul class="cell">
-          <li><%= link_to 'How we use your data', '#' %></li>
-          <li><%= link_to 'Privacy policy', '#' %></li>
+          <li><%= link_to 'Privacy policy', 'https://www.forsa.ie/privacy/' %></li>
           <li>©2020 Forsa. All rights reserved.</li>
         </ul>
       </footer>
