Style the sub rate input with €

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -30,6 +30,29 @@ input {
   }
 }
 
+.input-euro {
+  position: relative;
+  &:before {
+    position: absolute;
+    z-index: 1;
+    top: 1px;
+    left: 1px;
+    content: '€';
+    padding-top: 0.4rem;
+    color: $dark-gray;
+    background-color: $light-gray;
+    width: 2rem;
+    height: 2.3rem;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+
+  input {
+    padding-left: 2.5rem;
+  }
+}
+
 .field_with_errors {
   input,
   textarea,
