Set monthly estimate applicant saw
Use a hidden field; if the applicant never saw it because they moved to
the next screen before the estimate had been retrieved, this will remain
blank.

--- a/app/views/membership_applications/steps/your-subscription-rate.erb
+++ b/app/views/membership_applications/steps/your-subscription-rate.erb
@@ -30,6 +30,7 @@
       <label>
         Based on your salary, your monthly payment will be
         €<span id="monthly-estimate-value">#NOVALUE</span>
+        <%= f.hidden_field :applicant_saw_monthly_estimate %>
       </label>
 
       <div class="help-text">
