Capture department/section optionally

--- a/app/views/membership_applications/steps/your-work.erb
+++ b/app/views/membership_applications/steps/your-work.erb
@@ -6,6 +6,11 @@
     <%= form_field_errors f, :job_title %>
     <%= f.text_field :job_title %>
 
+    <%= f.label :department_section %>
+    <%= form_field_errors f, :department_section %>
+    <%= help_for :department_section %>
+    <%= f.text_field :department_section %>
+
     <%= f.label :employer %>
     <%= form_field_errors f, :employer %>
     <%= f.text_field :employer %>
