--- a/app/views/membership_applications/steps/your-subscription-rate.erb
+++ b/app/views/membership_applications/steps/your-subscription-rate.erb
@@ -27,15 +27,20 @@
       <div class="hide spinner-overlay">
         <div class="lds-dual-ring"></div>
       </div>
+      <%= f.hidden_field :applicant_saw_monthly_estimate %>
+      <%= f.hidden_field :technical_grade %>
       <label>
         Based on your salary, your monthly payment will be
-        €<span id="monthly-estimate-value">#NOVALUE</span>
-        <%= f.hidden_field :applicant_saw_monthly_estimate %>
+        €<span id="monthly-estimate-value">
+          <%= @membership_application.applicant_saw_monthly_estimate %>
+        </span>
       </label>
 
       <div class="help-text">
-        <p>This is calculated at 0.8% of your gross salary,
-          which is what the majority of our members pay.</p>
+        <p>
+          This is calculated at <span id="subscription-rate">0.8</span>%
+          of your gross salary, which is what the majority of our members pay.
+        </p>
 
         <p>Some branches are calculated at a different rate.
           If your branch is one of these we will notify you in advance of any payment being processed.</p>
