Add a flash partial to application.html.erb
Map the standard Rails flash types to Foundation callouts.

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -73,7 +73,7 @@ $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #3d8a94,
   secondary: $forsa-aqua,
-  success: #3adb76,
+  success: #0d6055,
   warning: #ffae00,
   alert: #d34d5b,
 );
