--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
 
       <div class="grid-x align-center">
         <article class="cell medium-8 large-8 content">
+          <%= render 'shared/flash' %>
           <%= yield %>
         </article>
       </div>
@@ -41,7 +42,7 @@
       <footer class="grid-x">
         <div class="cell float-right">
           <% if user_signed_in? %>
-            Signed in as <%= current_user.email %>.
+            Signed in as <%= link_to current_user.email, admin_profile_path %>.
             <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
           <% end %>
         </div>
