Close dropdowns when user clicks outside
Needed an extra attribute

https://github.com/foundation/foundation-sites/issues/1831#issuecomment-399727695

--- a/app/views/shared/_help_for_field.html.erb
+++ b/app/views/shared/_help_for_field.html.erb
@@ -10,7 +10,7 @@
       <%= I18n.t("helpers.help_dropdown.membership_application.#{field}.link") %>
     </a>
 
-    <div id="<%= field %>-help-dropdown" class="dropdown-pane" data-dropdown>
+    <div id="<%= field %>-help-dropdown" class="dropdown-pane" data-dropdown data-close-on-click="true">
       <%= I18n.t("helpers.help_dropdown.membership_application.#{field}.content") %>
     </div>
   <% end %>
