--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -110,6 +110,7 @@ input {
     border-radius: 0 8px 8px 0;
     padding: $global-padding / 4 0 0 $global-padding;
     font-family: $body-font-family;
+    background-color: $white;
 
     &:last-child {
       margin-bottom: 0;
