--- a/app/views/membership_applications/steps/about-you.html.erb
+++ b/app/views/membership_applications/steps/about-you.html.erb
@@ -26,6 +26,7 @@
 
     <%= f.label :date_of_birth %>
     <%= form_field_errors f, :date_of_birth %>
+    <%= help_for :date_of_birth %>
     <%= f.text_field :date_of_birth %>
 
     <%= f.submit 'Next' %>
