"Small copy changes"
As per card

--- a/app/views/membership_applications/completed.html.erb
+++ b/app/views/membership_applications/completed.html.erb
@@ -41,4 +41,4 @@
 
 <p class="h4"><strong>You’re one of over 80,000 Fórsa members. Thanks for joining us.</strong></p>
 
-<p class="side-note">(*Subject to final processing and authorisation)<p>
+<p class="side-note">(*Subject to final processing and authorisation by your branch and/or the National Executive Committee)<p>
