--- a/app/views/membership_applications/steps/declaration.erb
+++ b/app/views/membership_applications/steps/declaration.erb
@@ -19,8 +19,10 @@
 
     <section class="callout secondary">
       <h3>A note about help with existing problems at work</h3>
-      <p>Fórsa helps our members. Unfortunately, we are unlikely to be able to help
-        with problems that occurred at work before you became a member.</p>
+      <p>
+        Fórsa helps our members. To receive help with a problem at work you must be a member.
+        We may not always be able to assist with a problem that occurred before you became a member.
+      </p>
 
       <p><strong>
         If you have any questions about this, please email us at
