--- a/app/views/membership_applications/steps/your-work.erb
+++ b/app/views/membership_applications/steps/your-work.erb
@@ -17,6 +17,7 @@
 
     <%= f.label :work_address %>
     <%= form_field_errors f, :work_address %>
+    <%= help_for :work_address %>
     <%= f.text_area :work_address, rows: 5 %>
 
     <%= f.label :payroll_number %>
