Front page copy change

--- a/app/views/membership_applications/new.html.erb
+++ b/app/views/membership_applications/new.html.erb
@@ -20,7 +20,7 @@
 <section>
   <h2>Get started</h2>
   <p class="side-note">
-    We will use this information to get in touch with you about your membership application.
+    We will use this information to get in touch with you about joining Fórsa.
   </p>
 
   <%= form_for(@membership_application, url: membership_application_path) do |f| %>
