Guard against editing when complete
Redirect to post-join questions when just complete, and root path
when we've answered the questions

--- a/app/views/membership_applications/steps/declaration.erb
+++ b/app/views/membership_applications/steps/declaration.erb
@@ -26,7 +26,7 @@
 
       <p><strong>
         If you have any questions about this, please email us at
-        <%= link_to 'applicationsinfo@forsa.ie', 'mailto:applicationsinfo@forsa.ie' %> or
+        <%= link_to t('site_email'), "mailto:#{t('site_email')}" %> or
         call us on <%= link_to '01 817 1500', 'tel:01 817 1500' %>
       </strong></p>
     </section>
