Clear the session when done
This means we can no longer ask if the applicant has
answered_post_join? – use nil? instead!

Also any missing step redirects to the front page.

--- a/app/views/membership_applications/completed.html.erb
+++ b/app/views/membership_applications/completed.html.erb
@@ -3,7 +3,7 @@
   Welcome to Fórsa!
 </h1>
 
-<% if @membership_application.answered_post_join? %>
+<% if @membership_application.nil? %>
   <div class="callout secondary">
     <p class="h4"><strong><%= t('thanks_on_completion') %></strong></p>
   </div>
